--- a/index.html
+++ b/index.html
@@ -25,54 +25,60 @@
   <body>
     <div id="auth-container" class="auth-container">
       <div class="auth-card">
-        <div class="auth-header">
+        <div class="auth-panel auth-panel-branding">
           <div class="auth-logo"><i class="fas fa-landmark"></i></div>
-          <h2>Admin Panel Login</h2>
-          <p>Welcome back! Please enter your credentials.</p>
+          <h2 class="branding-title">Loan Manager</h2>
+          <p class="branding-subtitle">
+            Streamline your lending operations with precision and ease.
+          </p>
         </div>
-        <div class="auth-body">
-          <form id="login-form">
-            <div class="form-group">
-              <label for="login-email">Email</label>
-              <div class="input-group">
-                <i class="fas fa-envelope"></i>
-                <input
-                  type="email"
-                  id="login-email"
-                  class="form-control"
-                  placeholder="you@example.com"
-                  required
-                />
+        <div class="auth-panel auth-panel-form">
+          <div class="auth-header">
+            <p>Welcome back! Please enter your credentials.</p>
+          </div>
+          <div class="auth-body">
+            <form id="login-form">
+              <div class="form-group">
+                <label for="login-email">Email</label>
+                <div class="input-group">
+                  <i class="fas fa-envelope"></i>
+                  <input
+                    type="email"
+                    id="login-email"
+                    class="form-control"
+                    placeholder="you@example.com"
+                    required
+                  />
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <label for="login-password">Password</label>
-              <div class="input-group">
-                <i class="fas fa-lock"></i>
-                <input
-                  type="password"
-                  id="login-password"
-                  class="form-control"
-                  placeholder="••••••••••••"
-                  required
-                />
+              <div class="form-group">
+                <label for="login-password">Password</label>
+                <div class="input-group">
+                  <i class="fas fa-lock"></i>
+                  <input
+                    type="password"
+                    id="login-password"
+                    class="form-control"
+                    placeholder="••••••••••••"
+                    required
+                  />
+                </div>
               </div>
+              <button
+                id="login-btn"
+                type="submit"
+                class="btn btn-primary btn-block"
+              >
+                <span class="loading-spinner hidden"></span>
+                <span>Login</span>
+              </button>
+              <p id="login-error" class="error-message"></p>
+            </form>
+            <div class="auth-footer">
+              <button class="btn btn-link" id="forgot-password-link">
+                Forgot Password?
+              </button>
             </div>
-            <button
-              id="login-btn"
-              type="submit"
-              class="btn btn-primary btn-block"
-            >
-              <span class="loading-spinner hidden"></span>
-              <span>Login</span>
-            </button>
-            <p id="login-error" class="error-message"></p>
-          </form>
-          <div
-            class="auth-footer"
-            style="margin-top: 1.5rem; text-align: center"
-          >
-            <a href="#" id="forgot-password-link">Forgot Password?</a>
           </div>
         </div>
       </div>
