--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div id="admin-dashboard" class="admin-container hidden">
       <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
-          <h2><i class="fas fa-landmark"></i> <span>Loan Manager</span></h2>
+          <h2 class="ola"><i class="fas fa-landmark"></i> <span>Loan Manager</span></h2>
         </div>
         <div class="sidebar-menu">
           <a href="#" class="menu-item active" data-section="dashboard"
