--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
                   ><input type="tel" id="customer-phone" class="form-control" />
                 </div>
               </div>
+              <div class="form-group">
+                <label for="customer-email">Email</label>
+                <input type="email" id="customer-email" class="form-control" />
+              </div>
               <div class="form-row">
                 <div class="form-group">
                   <label for="customer-father-name">Father's Name</label
