--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   </head>
   <body>
     <div id="auth-container" class="auth-container">
@@ -209,7 +211,11 @@
               </div>
               <div class="form-group">
                 <label for="customer-email">Email</label>
-                <input type="email" id="customer-email" class="form-control" />
+                <input
+                  type="email"
+                  id="customer-email"
+                  class="form-control"
+                />
               </div>
               <div class="form-row">
                 <div class="form-group">
@@ -460,6 +466,7 @@
     <script src="excel.js"></script>
     <script src="graph.js"></script>
     <script src="theme-switcher.js"></script>
+    <script src="pdf-generator.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
