--- a/pdf-template.html
+++ b/pdf-template.html
@@ -99,9 +99,13 @@
         background-color: #dcfce7;
         color: #166534;
       }
-      .status.due {
+       .status.pending {
         background-color: #fef9c3;
         color: #854d0e;
+      }
+      .status.due {
+        background-color: #fee2e2;
+        color: #991b1b;
       }
       .footer {
         text-align: center;
@@ -138,7 +142,7 @@
               <span>Tenure:</span> <strong>{{tenure}}</strong>
             </div>
             <div class="detail-item">
-              <span>Monthly EMI:</span> <strong>{{emiAmount}}</strong>
+              <span>Installment Amount:</span> <strong>{{emiAmount}}</strong>
             </div>
           </div>
           <div class="details-box">
@@ -157,16 +161,15 @@
         </div>
 
         <section class="emi-schedule">
-          <h2>EMI Repayment Schedule</h2>
+          <h2>Installment Repayment Schedule</h2>
           <table>
             <thead>
               <tr>
                 <th>#</th>
                 <th>Due Date</th>
-                <th>EMI</th>
-                <th>Principal</th>
-                <th>Interest</th>
-                <th>Balance</th>
+                <th>Amount Due</th>
+                <th>Amount Paid</th>
+                <th>Pending</th>
                 <th>Status</th>
               </tr>
             </thead>
