--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loan Manager | EMI Loan Management</title>
+    <title>Global Finance Consultant | EMI Loan Management</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -28,8 +28,8 @@
     <div id="auth-container" class="auth-container">
       <div class="auth-card">
         <div class="auth-panel auth-panel-branding">
-          <div class="auth-logo"><i class="fas fa-landmark"></i></div>
-          <h2 class="branding-title">Loan Manager</h2>
+          <div class="auth-logo"><i class="fas fa-globe"></i></div>
+          <h2 class="branding-title">GF Consultant</h2>
           <p class="branding-subtitle">
             Streamline your lending operations with precision and ease.
           </p>
@@ -90,7 +90,9 @@
       <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
           <h2 class="ola">
-            <i class="fas fa-landmark"></i> <span>Loan Manager</span>
+            <i class="fas fa-globe"></i>
+            <span class="sidebar-brand-full">GF Consultant</span>
+            <span class="sidebar-brand-short">GFC</span>
           </h2>
         </div>
         <div class="sidebar-menu">
@@ -168,6 +170,10 @@
         <div id="settled-accounts-section" class="section-content"></div>
         <div id="calculator-section" class="section-content"></div>
         <div id="settings-section" class="section-content"></div>
+
+        <footer class="app-footer">
+          © 2025 Global Finance Consultant. All Rights Reserved.
+        </footer>
       </div>
     </div>
 
@@ -390,6 +396,10 @@
                     />
                   </div>
                 </div>
+                <div
+                  id="installment-preview"
+                  class="installment-preview hidden"
+                ></div>
               </fieldset>
             </div>
             <p id="customer-form-error" class="error-message"></p>
